[metadata]
name = website
version = 0.0.1
author = Iva Momcheva
author_email = ivelina.momcheva@gmail.com
description = lists
long_description = file: README.md
long_description_content_type = text/markdown
license = BSD-3-Clause
license_file = LICENSE
url = https://github.com/ivastar/z10-galaxies
project_urls =
    Bug Tracker = https://github.com/ivastar/z10-galaxies
    Sourse Code = https://github.com/ivastar/z10-galaxies
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent

[options]
package_dir =
    =src
packages = find:
python_requires= >=3.7
include_package_data = true

# Example of how to add dependencies:
install_requires =
  importlib-metadata >= 2.0 ; python_version < "3.8"
  pyyaml

[options.packages.find]
where = src

[options.extras_require]
docs =
  markdown
test =
  pytest

[options.package_data]
website =
  things/*yml
